@@ -11,7 +11,9 @@ import org.springframework.stereotype.Service;
 import source.code.dto.request.Recipe.RecipeFoodCreateDto;
 import source.code.dto.response.FoodResponseDto;
 import source.code.exception.NotUniqueRecordException;
+import source.code.exception.RecordNotFoundException;
 import source.code.service.declaration.Helpers.JsonPatchService;
+import source.code.service.declaration.Helpers.RepositoryHelper;
 import source.code.service.declaration.Helpers.ValidationService;
 import source.code.mapper.Food.FoodMapper;
 import source.code.model.Food.Food;
@@ -24,16 +26,16 @@ import source.code.service.declaration.Recipe.RecipeFoodService;
 
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 
 @Service
 public class RecipeFoodServiceImpl implements RecipeFoodService {
   private final ValidationService validationService;
+  private final JsonPatchService jsonPatchService;
+  private final FoodMapper foodMapper;
+  private final RepositoryHelper repositoryHelper;
   private final RecipeFoodRepository recipeFoodRepository;
   private final FoodRepository foodRepository;
   private final RecipeRepository recipeRepository;
-  private final JsonPatchService jsonPatchService;
-  private final FoodMapper foodMapper;
 
   public RecipeFoodServiceImpl(
           ValidationService validationService,
@@ -41,13 +43,15 @@ public class RecipeFoodServiceImpl implements RecipeFoodService {
           FoodRepository foodRepository,
           RecipeRepository recipeRepository,
           JsonPatchService jsonPatchService,
-          FoodMapper foodMapper) {
+          FoodMapper foodMapper,
+          RepositoryHelper repositoryHelper) {
     this.validationService = validationService;
     this.recipeFoodRepository = recipeFoodRepository;
     this.foodRepository = foodRepository;
     this.recipeRepository = recipeRepository;
     this.jsonPatchService = jsonPatchService;
     this.foodMapper = foodMapper;
+    this.repositoryHelper = repositoryHelper;
   }
 
   @CacheEvict(value = "foodsByRecipe", key = "#recipeId")
@@ -59,18 +63,9 @@ public class RecipeFoodServiceImpl implements RecipeFoodService {
               + " already has food with id: " + foodId);
     }
 
-    Recipe recipe = recipeRepository
-            .findById(recipeId)
-            .orElseThrow(() -> new NoSuchElementException(
-                    "Recipe with id: " + recipeId + " not found"));
-
-    Food food = foodRepository
-            .findById(foodId)
-            .orElseThrow(() -> new NoSuchElementException(
-                    "Food with id: " + foodId + " not found"));
-
-    RecipeFood recipeFood = RecipeFood
-            .createWithAmountRecipeFood(request.getAmount(), recipe, food);
+    Recipe recipe = repositoryHelper.find(recipeRepository, Recipe.class, recipeId);
+    Food food = repositoryHelper.find(foodRepository, Food.class, foodId);
+    RecipeFood recipeFood = RecipeFood.createWithAmountRecipeFood(request.getAmount(), recipe, food);
 
     recipeFoodRepository.save(recipeFood);
   }
@@ -80,12 +75,7 @@ public class RecipeFoodServiceImpl implements RecipeFoodService {
   public void updateFoodRecipe(int recipeId, int foodId, JsonMergePatch patch)
           throws JsonPatchException, JsonProcessingException {
 
-    RecipeFood recipeFood = recipeFoodRepository
-            .findByRecipeIdAndFoodId(recipeId, foodId)
-            .orElseThrow(() -> new NoSuchElementException(
-                    "RecipeFood with recipe id: " + recipeId
-                            + " and food id: " + foodId + " not found"));
-
+    RecipeFood recipeFood = find(recipeId, foodId);
     RecipeFoodCreateDto existingRecipeFoodDto = new RecipeFoodCreateDto(recipeFood.getAmount());
 
     RecipeFoodCreateDto patchedDto = jsonPatchService
@@ -103,26 +93,22 @@ public class RecipeFoodServiceImpl implements RecipeFoodService {
   @CacheEvict(value = "foodsByRecipe", key = "#recipeId")
   @Transactional
   public void deleteFoodFromRecipe(int foodId, int recipeId) {
-    RecipeFood recipeFood = recipeFoodRepository
-            .findByRecipeIdAndFoodId(recipeId, foodId)
-            .orElseThrow(() -> new NoSuchElementException(
-                    "RecipeFood with recipe id: " + recipeId
-                            + " and food id: " + foodId + " not found"));
-
+    RecipeFood recipeFood = find(recipeId, foodId);
     recipeFoodRepository.delete(recipeFood);
   }
 
   @Cacheable(value = "foodsByRecipe", key = "#recipeId")
   public List<FoodResponseDto> getFoodsByRecipe(int recipeId) {
-    List<RecipeFood> recipeFoods = recipeFoodRepository.findByRecipeId(recipeId);
-
-    List<Food> foods = recipeFoods.stream()
+    return recipeFoodRepository.findByRecipeId(recipeId).stream()
             .map(RecipeFood::getFood)
-            .collect(Collectors.toList());
-
-    return foods.stream()
             .map(foodMapper::toResponseDto)
-            .collect(Collectors.toList());
+            .toList();
+  }
+
+  private RecipeFood find(int recipeId, int foodId) {
+    return recipeFoodRepository
+            .findByRecipeIdAndFoodId(recipeId, foodId)
+            .orElseThrow(() -> new RecordNotFoundException("RecipeFood", foodId, recipeId));
   }
 
   private boolean isAlreadyAdded(int recipeId, int foodId) {
